style.css
/* TODO
	split this into structural and decorative styles
*/
:host {
	display: inline-grid !important;
	grid-template:
		"canvas" max-content
		"controls" auto
		/ min-content;
	--S: 2;
	border: 2px solid gray;
	-webkit-user-select: none; user-select: none;
}
:host > img {
	grid-area: canvas;
	width: 100%;
	height: 100%;
	cursor: crosshair;
	touch-action: none;
	opacity: 0;
}
:host > canvas {
	grid-area: canvas;
	width: calc(var(--width)*1px*var(--S, 1));
	pointer-events: none;
}
canvas {
	image-rendering: -moz-crisp-edges; image-rendering: pixelated;
}
canvas.main {
	background: repeating-linear-gradient(1.23deg, #F0E0AA, #D8D0A8 0.38291px);
}
canvas.overlay {
	opacity: 0.7;
}
form {
	grid-area: controls;
	display: flex;
	-webkit-user-select: none; user-select: none;
	justify-content: space-evenly;
	font-size: calc(var(--S)*5px);
}
fieldset {
	all: unset;
	display: grid;
	grid-auto-flow: row;
	align-content: space-between;
	--bw: 20px;
	--rows: 5;
	--gap: 2px;
	grid-template-columns: repeat(var(--cols), 1fr);
	grid-template-rows: auto;
	grid-auto-rows: 1fr;
	margin: 0 calc(1px*var(--S));
	margin-bottom: calc(var(--gap)*var(--S)*-1);
}
fieldset.small {
	grid-template-rows: auto repeat(8, 1fr);
	grid-auto-flow: column;
	--bw: 10px;
	--bh: 8px;
	--rows: 8;
	--gap: 1px;
}
fieldset > div {
	grid-column: 1 / -1;
	justify-self: center;
}
hr { /* todo this sucks */
	all: unset;
	width: 1px;
}
/* button container */
label {
	display: block;
	
	height: calc(var(--S)*var(--bh));
	width: calc(var(--S)*var(--bw));
	margin-bottom: calc(var(--gap)*var(--S));
	margin-right: calc(1px*var(--S));
	
	position: relative;
}
label > * {
	position: absolute;
	margin: 0;
	appearance: none;
	width: 100%;
	height: 100%;
}
label > input {
	opacity: 0;
	cursor: pointer;
}
button {
	font: unset;
	font-weight: bold;
	display: grid;
	align-content: center;
	justify-content: center;
	text-align: center;
	overflow: hidden;
	pointer-events: none;
	
	border: calc(var(--S)*1px) solid gray;
	line-height: 0;
}
:checked + button {
	background: #CCC;
}
/* larger text button */
button.icon {
	font-weight: normal;
	font-size: 2em;
}
/* color button */
button.color > div {
	display: block;
	background: currentColor;
	width: calc(var(--S)*16px);
	height: calc(var(--S)*12px);
}
/* pattern button */
button canvas {
	height: calc(var(--S)*4px);
	background: #F0E0AA;
}

